Increasing width to prevent weird wrapping at larger viewport widths

--- a/css/ux-design-contest.css
+++ b/css/ux-design-contest.css
@@ -351,7 +351,7 @@ a {
   font-size: 2rem; }
 
 .w-15 {
-  max-width: 15rem; }
+  max-width: 20rem; }
 
 .img--testimonial {
   border-radius: 4rem;
